# dad-updater

./: .woodpecker.yml  Cargo.toml  LICENSE  README.md  default.reg
src/: config.rs  download.rs  game.rs  launcher.rs  main.rs  update.rs
