[package]
name = "dad-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream" ]}
futures = { version = "0.3" }
csv = "1"
sha256 = "1"
lazy_static = "1"
indicatif = "0.17"
clap = { version = "4.4.2", features = ["derive", "env"] }
colored = "2"
