[package]
name = "dad-updater"
version = "0.1.7"
edition = "2021"
authors = ["thoxy"]
license = "MIT"
description = "Dark and Darker updater"
repository = "https://github.com/thoxy67/dad-updater"
readme = "README.md"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["stream", "json"] }
futures = { version = "0.3.29" }
csv = "1.3.0"
sha256 = "1.4.0"
lazy_static = "1.4.0"
indicatif = "0.17.7"
clap = { version = "4.4.11", features = ["derive", "env"] }
colored = "2.0.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
